--- a/InternAssessmentApp/app/src/main/res/values/strings.xml
+++ b/InternAssessmentApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">InternAssessmentApp</string>
+    <string name="app_name">SamSung-Assessment-App</string>
 </resources>
